Fix missing setting in lighttpd.conf

--- a/www/lighttpd.conf
+++ b/www/lighttpd.conf
@@ -15,6 +15,7 @@ server.username             = "www-data"
 server.groupname            = "www-data"
 server.port                 = 80
 
+index-file.names            = ( "index.php", "index.html", "index.lighttpd.html" )
 url.access-deny = ( "~", ".inc" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
