Changes ini to start socket in /var/www

--- a/www/rovercode.ini
+++ b/www/rovercode.ini
@@ -4,7 +4,7 @@ module = wsgi:app
 master = true
 processes = 5
 
-socket = rovercode.sock
+socket = /var/www/rovercode/rovercode.sock
 chmod-socket = 777
 vacuum = true
 
