Tightens socket permissions

--- a/www/rovercode.ini
+++ b/www/rovercode.ini
@@ -4,8 +4,11 @@ module = wsgi:app
 master = true
 processes = 5
 
+uid = root
+gid = www-data
+
 socket = /var/www/rovercode/rovercode.sock
-chmod-socket = 777
+chmod-socket = 664
 vacuum = true
 
 die-on-term = true
