--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=config.settings.local
+norecursedirs = Adafruit_Python_GPIO
 addopts = --strict --cov=www --cov-report term-missing --cov-report html
