--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - pip install coveralls
 script:
   - py.test
-  - prospector
+  - cd .. && prospector
 after_success:
   - coveralls
 language: python
