--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ before_install:
   - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
   - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
   - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
-  - cd www/
-  - git clone https://github.com/aninternetof/Adafruit_Python_GPIO.git
-  - cd Adafruit_Python_GPIO
+  - cd www/Adafruit_Python_GPIO/
   - python setup.py install
   - cd ../../
 install:
