Cleans some style and uses a variable better

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install coveralls
 script:
   - py.test
-  - pwd && prospector
+  - prospector
 after_success:
   - coveralls
 language: python
