--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-norecursedirs = Adafruit_Python_GPIO
+norecursedirs = env www/Adafruit_Python_GPIO
 addopts = --strict --cov --cov-report term-missing --cov-report html
