--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ after_success:
   - coveralls
 language: python
 virtualenv:
-  - system_site_packages: true
+  system_site_packages: true
 python:
 - "2.7"
 notifications:
