--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Adafruit_Python_GPIO"]
-	path = rovercode/Adafruit_Python_GPIO
+	path = Adafruit_Python_GPIO
 	url = https://github.com/aninternetof/Adafruit_Python_GPIO
