--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,15 @@ before_install:
   wget curl llvm
 - cd Adafruit_Python_GPIO/
 - python setup.py install
-- cd ../../
+- cd ../
 install:
 - pip install -r requirements.txt
 - pip install coveralls
 script:
+- pushd rovercode
+- python -m pytest
+- prospector
+- popd
 - pushd docs
 - make html
 - popd
@@ -27,7 +31,7 @@ language: python
 virtualenv:
   system_site_packages: true
 python:
-- '2.7'
+- '3.6'
 deploy:
 - provider: s3
   access_key_id: AKIAIIORSR4VN3YQY2YQ
