--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 [submodule "GrovePi"]
 	path = GrovePi
 	url = https://github.com/rovercode/GrovePi.git 
-	branch = firmware-fixes-1.3.0
+	branch = develop
