--- a/rovercode/.coveragerc
+++ b/rovercode/.coveragerc
@@ -1,2 +1,2 @@
 [run]
-omit = */tests/*, */conftest.py, drivers/*, /home/travis/virtualenv/*
+omit = */tests/*, */conftest.py, drivers/*, ../GrovePi/*, /home/travis/virtualenv/*
