Remove Adafruit GPIO library

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   libreadline-dev
 - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev
   wget curl llvm
-- cd Adafruit_Python_GPIO/
+- cd GrovePi/Software/Python
 - python setup.py install
 - cd ../
 install:
