--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ before_install:
   libreadline-dev
 - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev
   wget curl llvm
-- cd GrovePi/Software/Python
+- pushd GrovePi/Software/Python
 - python setup.py install
-- cd ../../../
+- popd
 install:
 - pip install -r requirements.txt
 - pip install coveralls
