--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: true
+env:
+  - DEVELOPMENT=true
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev
