Fix copy-paste error on Pre in commissioning service

--- a/services/commissioning.service
+++ b/services/commissioning.service
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 Restart=always
 User=root
 Group=root
-ExecStartPre=-/usr/bin/docker stop rovercode
+ExecStartPre=-/usr/bin/docker stop rovercode-commissioning
 ExecStart=-/usr/bin/docker run --name rovercode-commissioning --privileged -v /dev:/dev -w='/var/rovercode/commissioning' --entrypoint=/bin/bash rovercode -c 'python app.py /dev/something /opt/rovercode/ TODO: use real /dev location'
 StandardOutput=syslog
 StandardError=syslog
