--- a/commissioning/.prospector.yaml
+++ b/commissioning/.prospector.yaml
@@ -14,6 +14,8 @@ pylint:
     - logging-fstring-interpolation
     # Too many false positives for unnecessary lambdas
     - W0108
+    # Test mocks need a lot of arguments
+    - too-many-arguments
 
 pep8:
   full: true
