--- a/services/rovercode.service
+++ b/services/rovercode.service
@@ -11,8 +11,8 @@ Group=root
 ExecStartPre=-/usr/bin/docker stop rovercode
 ExecStartPre=-/usr/bin/docker system prune
 ExecStartPre=-/usr/bin/docker rm rovercode
-ExecStartPre=-/usr/bin/docker pull rovercode/rovercode:latest
-ExecStart=-/usr/bin/docker run --name rovercode --privileged -v /dev:/dev -v /opt/rovercode/.env:/var/rovercode/.env rovercode
+ExecStartPre=-/usr/bin/docker pull rovercode/rovercode-arm:latest
+ExecStart=-/usr/bin/docker run --name rovercode --privileged -v /dev:/dev -v /opt/rovercode/.env:/var/rovercode/.env rovercode-arm
 StandardOutput=syslog
 StandardError=syslog
 
