--- a/services/rovercode.service
+++ b/services/rovercode.service
@@ -9,10 +9,9 @@ Restart=always
 User=root
 Group=root
 ExecStartPre=-/usr/bin/docker stop rovercode
-ExecStartPre=-/usr/bin/docker system prune
-ExecStartPre=-/usr/bin/docker rm rovercode
+ExecStartPre=-/usr/bin/docker system prune -f
 ExecStartPre=-/usr/bin/docker pull rovercode/rovercode-arm:latest
-ExecStart=-/usr/bin/docker run --name rovercode --privileged -v /dev:/dev -v /opt/rovercode/.env:/var/rovercode/.env rovercode-arm
+ExecStart=-/usr/bin/docker run --name rovercode --privileged -v /dev:/dev -v /opt/rovercode/.env:/var/rovercode/.env rovercode/rovercode-arm
 StandardOutput=syslog
 StandardError=syslog
 
