Fix ordering dependencies of services

--- a/services/rovercode.service
+++ b/services/rovercode.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Rovercode Daemon Service
-After=network.target syslog.target docker.service commissioning.service
-Requires=docker.service
+After=network.target syslog.target docker.service rovercode-commissioning.service
+Requires=docker.service rovercode-commissioning.service
 
 [Service]
 TimeoutStartSec=0
