--- a/services/rovercode-commissioning.service
+++ b/services/rovercode-commissioning.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Rovercode Commissioning Service
+Before=rovercode.service
 After=syslog.target docker.service
 Requires=docker.service
 
 [Service]
+Type=oneshot
 TimeoutStartSec=0
-Restart=on-failure
-RestartSec=1
 User=root
 Group=root
 ExecStartPre=-/usr/bin/docker stop rovercode-commissioning
