Get rid of old wpa commands script

--- a/services/rovercode-commissioning.service
+++ b/services/rovercode-commissioning.service
@@ -9,6 +9,8 @@ Type=oneshot
 TimeoutStartSec=0
 User=root
 Group=root
+ExecStartPre=-/bin/rm -f /opt/rovercode/wpa-cli-commands.sh
+ExecStartPre=-/bin/touch /opt/rovercode/wpa-cli-commands.sh
 ExecStartPre=-/usr/bin/docker stop rovercode-commissioning
 ExecStartPre=-/usr/bin/docker rm -f rovercode-commissioning
 ExecStartPre=-/bin/mkdir -p /mnt/usb-stick
